implement web template for details

--- a/src/app/movie-details/movie-details.component.tns.html
+++ b/src/app/movie-details/movie-details.component.tns.html
@@ -1,1 +1,3 @@
-<Button text="movie-details works!" class="btn btn-primary"></Button>
+<FlexboxLayout *ngIf="movie$ | async as movie">
+    <Label [text]="movie.title" textWrap="true"></Label>
+</FlexboxLayout>
